Tue Feb  22  19:26:45 2005 Oystein Johansen <oystein@gnubg.org>

        * gtkcube.c (CubeAnalysisEvalPly): Get the evalcontext right!

Tue Feb  22  19:06:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (GTKFileCommand): Apply a fix from Ingo
	
Fri Feb  18  16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* matchequity.c : Fix met xml files met/catalog (By Ingo Macherius)

Thu Feb  17  16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkfile.c (and a few others): First part of new
		file dialogs (By Ingo Macherius)
	* gtkpanels.c: Minor gtk 2 window fix

Tue Feb  15  17:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkpanels.c: Remember maximised state of windows

Mon Feb  14  12:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
	Fixes from Philippe Michel:
	rollout.c, format.c: Fix bugs in rollout output
	gnubg.c: Fix for bug 10099
	makebearoff1.c: Typo

Thu Feb  10  10:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
	Fixes from Ingo Macherius:
		external_l.l, external_y.y: Minor parser change
		gnubg.c: No-gui build fixes
		gtkpanels.c: Remove compiler warning
		gnubgmodule.c/h: Add paramater to FindCubeDecision
	
	Fix from Philippe Michel:
		matchid.c: Buffer fix for matchidfromkey

	Fixes for gtk 2.6:
		gnubg.c: Don't hide windows on close - so sound finishes correctly
		gtkprefs.c: Fix long pause if no boards.xml file
		misc3d.c, play.c: Dice not shown until after roll sound (3d)

Wed Feb  8  16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* Various fixes for gtk 2.6:
	eval.c : Increase poll time
	gnubg.c : Fix ok click problem for gtk 2.6
	gtkgame.c : Fix dock/undock problem for gtk 2.6
	gtkoptions.c gtkbearoff.c gtktempmap.c : Fix dialog modality


Tue Feb  7  17:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c: change get install dir to look at path to exe (windows)

Tue Feb  2  19:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
